--- a/midterm.Rmd
+++ b/midterm.Rmd
@@ -994,7 +994,7 @@ We can describe functions using diagrams:
 
 ![](img/img19.png)
 
-We can also decsribe this function as follows : $$f=(\begin{smallmatrix} 1 & 2 & 3\\ a & b&c\end{smallmatrix})$$
+We can also decsribe this function as follows : $$f=(\begin{smallmatrix} 1 & 2 & 3\\ a & b&b\end{smallmatrix})$$
 
 - top line is inputs
 
