--- a/midterm.Rmd
+++ b/midterm.Rmd
@@ -831,7 +831,7 @@ So,
 
 $\Rightarrow$ H is closed under coordinate-wise addition. 
 
-(ii) Let $(a_1,a_2)\in H$. Then $a_2=4a$. So, $$-(a_1,a_2)=(-a_1,-a_2)=(-a_1,-4a_1)=(-a_1,4(-a_1))\in H.$$
+(iii) Let $(a_1,a_2)\in H$. Then $a_2=4a$. So, $$-(a_1,a_2)=(-a_1,-a_2)=(-a_1,-4a_1)=(-a_1,4(-a_1))\in H.$$
 
 $\Rightarrow$ H is closed under inverses. Completing the proof that $H\leq\mathbb{R}\times\mathbb{R}\quad\quad\square$.
 
@@ -1216,7 +1216,258 @@ $\underline{\text{Note}}$: The group $S_4$ contains all permutations of $\{1,2,3
 
 # W4D10: Jan. 26th, 2022
 
+## Ch.7 Permutation Groups, Cont. 
+
+Let A be a set. A $\underline{\text{permutation}}$ of A is a bijections (one-to-one and onto) from A to A. 
+
+The $\underline{\text{symmetric group}}$ on A, denoted $S_A$, is the set of all permutations of A with the operation of function composition. 
+
+The identity permutation is the function $\epsilon : A\rightarrow A$ defined by $$\epsilon(x)=x.$$
+
+The inverse of $f\in S_A$ is defined as follows: $$f(x)=y\quad\Rightarrow\quad f^{-1}(y)=x.$$
+
+### Ex: 
+
+Last class we considered the group symmetries: 
+
+![](img/img30.png)
+
+There are 8 symmetries of the square. THis set forms an 8 element subgroup of $S_4$. (Recall, $|S_4|=24$.)
+
+Let H be the group of symmetries of the square. Since everything from H can be obtained from $r,s\in S_4$, we write: $$H=\langle(\begin{smallmatrix}1&2&3&4\\2&3&4&1\end{smallmatrix}),(\begin{smallmatrix}1&2&3&4\\4&3&2&1\end{smallmatrix})\rangle$$
+
+### Ex: 
+
+In this example, we're going to find a subgroup of $S_{\mathbb{Z}}$. $\forall n\in \mathbb{Z}$ define $f_n:\mathbb{Z}\rightarrow\mathbb{Z}$ by $f_n(x)=n+x$. 
+
+We'll show $H=\{f_n|n\in\mathbb{Z}\}$ is a subgroup of $S_{\mathbb{Z}}$. 
+
+i) Show that $H\subseteq S_{\mathbb{Z}}$, i.e. $f_n\in S_\mathbb{Z}\forall n\in \mathbb{Z}$.
+
+First, suppose $f_n(x_1)=f_n(x_2)$ for some $x_1,x_2\in\mathbb{Z}$. 
+
+\begin{equation}\label{D10P1i}
+\begin{split}
+f_n(x_1)=f_n(x_2) &\Rightarrow n+x_1=n+x_2\\
+&\Rightarrow x_1 = x_2
+\end{split}
+\end{equation}
+
+So, by definition, $f_n$ is one-to-one. 
+
+Now take any $y\in\mathbb{Z}$ and let $x=y-n\in\mathbb{Z}$. Then $$f_n(x)=f_n(y-n)=n+y-n=y.$$
+
+Thus, $f_n$ is onto. 
+
+(ii) No, we'll show that $\epsilon\in H=\{...,f_{-2}, f_{-1},f_{0},f_{1},f_{2},...\}$. 
+
+Since $f_0(x)=0+x=x$, $f_0=\epsilon$ ($\epsilon$ is the identity permutation). Hence, $\epsilon\in H$. 
+
+(iii) Now take any $f_n$ and $f_m$ in H. For all $x\in\mathbb{Z}$, $$(f_n\circ f_m)(x)=f_n(f_m(x))=f_n(m+x)=n+m+x.$$
+
+Since, $f_{n+m}(x)=n+m+x$ as well, $f_n\circ f_m = f_{n+m}\in H$. 
+
+(iv) Now we need to show that H is closed under inverses. 
+
+I claim that the inverse of $f_n$ is $f_{-n}$: $$f_n\circ f_{-n}=f_{n+(-n)}=f_0=\epsilon$$
+
+So by Theorem 2 from Ch. 4, $(f_n)^{-1}=f_{-n}\in H$. 
+
+Since $H\subseteq S_{\mathbb{Z}}$ contains the idenety, is closed under $\circ$, and closed under inverses, $H\leq S_{\mathbb{Z}}$. 
+
+## Ch.8 Permutations of a Finite Set
+
+If $A=\{1,2,3,...n\}$, for some $n\geq 1$, we use $S_n$ to denote the symmetric group on A. 
+
+### Ex: 
+
+Let $f=(\begin{smallmatrix}1&2&3&4&5\\3&4&1&1&5\end{smallmatrix})\in S_5$. 
+
+This function is called a $\underline{\text{cycle}}$:
+
+![](img/img31.png)
+
+We'll rewrite f using cycle notation: 
+
+![](img/img32.png)
+
+We write $f=(1\quad3\quad2\quad4)$ 
+
+- note: closing parentheses indicates that the last number is sent to the beginning of the cycle. 
+
+### Ex.
+
+Let $g=(\begin{smallmatrix}1&2&3&4&5&6&7\\5&3&1&7&2&6&4\end{smallmatrix})\in S_7$
+
+![](img/img33.png)
+
+$\Rightarrow g=(1523)(47)$
+
+This is called the $\underline{\text{cycle decomposition}}$ of g. 
+
+We call two cycles $\underline{\text{disjoin}}$ if they have no numbers in common. 
+
+$\underline{\text{Fact}}$: disjoint cycles in $S_n$ commute. 
+
+### Ex.
+
+Let $g=(1523)(47)\in S_7$. We can also write this as follows: 
+
+\begin{equation}\label{d10 example3}
+\begin{split}
+g &= (47)(1523)\\
+&= (74)(1523)\\
+&= (74)(3152)\\
+&\quad\quad \vdots
+\end{split}
+\end{equation}
+
+$\underline{\text{Fact}}$: Cycles that aren't dijoint don't necessary commute. 
+
+### Ex. 
+
+Let $f=(12)$ and $g=(23)$ in $S_3$. 
+
+Let's compute $f\circ g$ and $g\circ f$. 
+
+![](img/img34.png)
+
+### Ex.
+
+How can we find the inverse of $h=(1432)\in S_4$?
+
+![](img/img35.png)
+
+We can find $h^{-1}$ by writing the numbers in h backwards: $$h^{-1}=(2341)=(1234)$$
+
 # W4D11: Jan. 28th, 2022
+
+## Ch.8 Permutations of Finite Set, continued: 
+
+$S_n$ denotes the group of permutations of the set $\{1,2,3,...,n\}$. 
+
+A cycle in $S_n$ is a permutation of the form $f=(a_1,a_2,a_3,...a_k)$ when $f(a_i)=a_{i+1}\forall 1\leq i\leq k-1$ and $f(a_k)=a_1$. 
+
+Any number not appearing in the cycle $(a_1\quad a_2\quad a_3\quad\dots\quad a_k)$ is fixed by f. 
+
+![](img/img36.png)
+
+### Theorem 1
+
+Every permutation in $S_n$ is either the identity, a cycle or a composition (the book will say "product" here instead) of dijoint cycles. 
+
+### Ex. 
+
+Let $f=(\begin{smallmatrix}1&2&3&4&5&6&7&8\\8&4&5&1&6&3&7&2\end{smallmatrix})\in S_8$
+
+$f=(1824)(356)$
+
+We can also write this as $f=(356)(1824)$, etc. 
+
+### Def. Length and Transposition
+
+The number of integers in a cycle is called its $\underline{\text{length}}$. 
+
+A cycle of length 2 is called a $\underline{\text{transposition}}$. 
+
+### Ex.
+
+Let $f=(12)\in S_3$. What is $f\circ f$? Since f switches 1 and 2, composing with f will switch them back. 
+
+$\Rightarrow f\circ f=\epsilon$
+
+$\Rightarrow f=f^{-1}$
+
+$\underline{\text{Fact}}$: Every transposition in $S_n$ is equal to its own inverse. Equivalently, every transposition composed with itself gives the identity permutation $\epsilon$. 
+
+$\underline{\text{Fact}}$: Every permutation in $S_n$ can be written as a composition of transpositions. 
+
+### Ex. 
+
+Let $g=(127643)\in S_7$. We can write g as follows: $$g=(12)(27)(76)(64)(43)$$
+
+Here's another way: $$g=(34)(36)(37)(32)(31)$$
+
+### Theorem 
+
+When writing a permutation as a composition of transpositions, the parity (even/odd) of the number of transpositions is unique. 
+
+For example can't write a permutation as a compostion of 3 transposition and also as a composition of 4 transpositions. 
+
+### Ex. 
+
+In $S_3$, $(123)=(12)(23)=(13)(23)(12)(13)$
+
+A permutation in $S_n$ is called $\underline{\text{even/odd}}$ if it can be written as a composition of an even / odd number of transpositions. 
+
+$\underline{\text{Fact}}$: There are the same # of even permutations and odd permutations in $S_n$. 
+
+The set of all even permutations in $S_n$ is a subgroup called the $\underline{\text{alternating group}}$, which is denoted $A_n$. 
+
+### Ex. 
+
+Let $g=(127643)\in S_7$. The length of g is even. But $$g=(12)(27)(76)(64)(43),$$
+
+implying g is an odd permutation. 
+
+$\underline{\text{Facts}}$: 
+
+1. If the length of a cycle is even, then the cycle is an odd permutation. 
+
+2. If the length of a cycle is odd, then the cycle is an even permutation. 
+
+### Ex. 
+
+Is $h=(158)(2346)\in S_8$ an even or odd permutation? 
+
+![](img/img37.png)
+
+Since even+odd=odd, the permutaion h is odd. 
+
+### Ex. 
+
+(i) What happens if we compose two even permutations? 
+
+The result will be an even permutation since 
+
+even + even = even. 
+
+(ii) If f is an even/ odd permutation, then so is $f^{-1}$. 
+
+For example, if $h=(158)(2346)$, then 
+
+![](img/img38.png)
+
+These imply that $A_n$ (the set of even permutations in $S_n$) is closed under composition and inverses. 
+
+The identity $\epsilon$ is even since $\epsilon = (12)(12)$. So $\epsilon \in A_n$, completing the proof that $A_n$ is a subgroup of $S_n$. 
+
+### Ex. 
+
+In Ch.5, we showed that if G is abelian then $$H=\{x\in G|x^2=e\}$$ is a subgroup of G. 
+
+If G is nonabelian, this set H is not necessarily a subgroup. 
+
+Let's consider $G=S_n=\{\epsilon, (12), (13), (123), (132)\}$. 
+
+Then $\alpha = (12)$ and $\beta=(13)$ are in the set H, since $$\alpha^2=\alpha\circ\alpha=\epsilon\quad\text{and}\quad \beta^2=\beta\circ\beta=\epsilon.$$
+
+But $\alpha\circ \beta=(12)(13)=(132)$ and $(132)(132)=(123)\ne\epsilon$. 
+
+We've shown that in $S_3$, the set $H=\{x\in H|x^2=\epsilon\}$ is not a subgroup because $\alpha$, $\beta\in H$, but $\alpha\circ\beta\notin H$. 
+
+### Question for Ch. 10
+
+A question we'll answer in Ch.10:
+
+What is the least positive $n\in \mathbb{N}$ such that $a^n=e?$
+
+$\underline{\text{Ex}}$: Let $\alpha =(1324)\in S_4$. 
+
+![](img/img49.png)
+
+You can check that $\alpha^4=\alpha\circ\alpha\circ\alpha\circ\alpha=\epsilon$.
+
 
 # W5D12: Jan. 31st, 2022
 
