added notes and fixed small errors

--- a/midterm.Rmd
+++ b/midterm.Rmd
@@ -1505,9 +1505,9 @@ $\forall a,b,\in G$ we want f to take $ab\in G$ to the element $f(a)f(b)\in G_2$
 
 A function $f:G_1\rightarrow G_2$ is called an $\underline{\text{isomorphism}}$ if f is a bijection and for all $a,b\in G$, $$\text{operation in }G_1\rightarrow\quad f(ab)=f(a)f(b)\quad\leftarrow\text{operation in }G_2$$
 
-If the operation in $G_1$ and / or $G_2$ is "+", the above equation might look like $f(a+b)=f(a)f(b)$, $f(ab)=f(a)+f(b)$, or $f(a+b)=f(a)+f(b)$. 
+If the operation in $G_1$ and / or $G_2$ is "+", the above equation might look like $f(a+b)=f(a)f(b)$, $f(ab)=f(a)+f(b)$, or $f(a+b)=f(a)+f(b)$. (Left side might use addition, right side might use addition, both sides might use addition)
 
-If f is an isomorphism from $G_1$ to $G_2$, we call $G_1$ and $G_2$ $\underline{\text{isomporphic}}$ and we write $G_1\cong G_2$. 
+If f is an isomorphism from $G_1$ to $G_2$, we call $G_1$ and $G_2$ $\underline{\text{isomorphic}}$ and we write $G_1\cong G_2$. 
 
 ### Ex. Show $\langle\mathbb{R},+\rangle\cong\langle\mathbb{R},\cdot\rangle$
 
@@ -1531,11 +1531,13 @@ Now let $y\in \mathbb{R}^+$ and $x=log(y)\in \mathbb{R}$. Then $$f(x)=10^x=10^{l
 
 proving f is onto. 
 
-Last, take any $a,b\in\mathbb{R}$. Then $$f(a+b)=10^{1+b}=10^a10^b=f(a)f(b)$$. 
+Last, take any $a,b\in\mathbb{R}$. Then $$f(a+b)=10^{a+b}=10^a10^b=f(a)f(b)$$. 
 
 Hence, $\langle\mathbb{R},+\rangle\cong\langle\mathbb{R},\cdot\rangle$. 
 
 ### Ex. Show that $\langle\mathbb{Z},+\rangle\cong\langle7\mathbb{Z},+\rangle$
+
+Note: Integers will always be under addition. 
 
 Recall, $7\mathbb{Z}=\{...,-14,-7, 0, 7, 14, 28, ...\}$
 
@@ -1547,13 +1549,13 @@ So $\mathbb{Z}\cong 7\mathbb{Z}$.
 
 ### Ex. Construct an isomorphism 
 
-Let $G_1=\mathbb{Z}_4=\{0,1,2,3,\}=\langle 1\rangle$. 
+Let $G_1=\mathbb{Z}_4=\{0,1,2,3\}=\langle 1\rangle$. 
 
 $\rightarrow$ all elements of $\mathbb{Z}_4$ can be obtained from 1 using repeated addition mod 4. 
 
 Let $G_2=\{1,-1,i,-i\}\subseteq\mathbb{C}$ with the operation of complex multiplication. 
 
-Since $i^2=-1$, $i^3=-i$, and $i^4=1$, $G_2=\langle i\rangle$. 
+Since $i^2=-1$, $i^3=-i$, and $i^4=1$, then $G_2=\langle i\rangle$. 
 
 We'll construct an isomorphism $f:G_1\rightarrow G_2$ by specifying that $f(1)=i$. 
 
@@ -1561,7 +1563,7 @@ Then,
 
 $$f(2)=f(1+1)=f(1)f(1)=i^2=-1$$
 
-$$f(2)=f(1+2)=f(1)f(2)=i(-1)=-i$$
+$$f(3)=f(1+2)=f(1)f(2)=i(-1)=-i$$
 
 $$f(0)=f(1+3)=f(1)f(3)=i(-i)=1$$ 
 
@@ -1573,7 +1575,11 @@ $$f=(\begin{smallmatrix} 0 & 1 & 2 & 3\\ 1 & i & -1 & -i\end{smallmatrix})$$
 
 Notice: 1 and 3 are inverses in $\mathbb{Z}_4$. Similarly, i and $-i$ are inverses in $G_2$. 
 
-### Prop. 1: If f is an isomorphism 
+(This is enough for cyclic groups)
+
+Also Notice: Identity elements are always paired (0 paired with 1). Two inverses paired up in the first group will be paired up with the inverses in the second.
+
+### Prop. 1: True for any isomorphic group 
 
 Let $f:G_1\rightarrow G_2$ be an isomorphism. Then 
 
@@ -1582,6 +1588,8 @@ Let $f:G_1\rightarrow G_2$ be an isomorphism. Then
 (ii) $\forall a\in G$, $f(a)$ and $f(a^{-1})$ are inverses in $G_2$, i.e. $$f(a^{-1)}=[f(a)]^{-1}$$
 
 (iii) If $G_1=\langle a\rangle$, then $G_2=\langle f(a)\rangle$.
+
+(If the first group )
 
 ### Proof of Prop. 1
 
@@ -1595,7 +1603,7 @@ f(e_1)e_2 &= f(e_1)\\
 \end{split}
 \end{equation}
 
-$\Rightarrow e_2=f(e_2)$, by left cancellation. 
+$\Rightarrow e_2=f(e_1)$, by left cancellation. 
 
 (ii) To show $f(a)$ and $f(a^{-1})$ are inverses, let's show their product is the identity $e_2\in G$: 
 
